Fixed one of the layout bugs in IE6.

--- a/mocha-ui/css/ui.css
+++ b/mocha-ui/css/ui.css
@@ -208,8 +208,6 @@ body {
 
 #pageWrapper {
 	position: relative;
-	width: auto;
-	height: 100%;
 	overflow: hidden; /* This can be set to hidden or auto */
 	background: #ebebeb;
 }
